<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:background="@drawable/worker_box">

    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/worker">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvWorkerdtk">
        </TextView>
    </LinearLayout>
    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_keeping_date">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDatedtk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Chọn ngày"
                ></TextView>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <Button
            style="@style/btn_delete_style"
            android:text="@string/delete"
            android:id="@+id/btnConfirmDelete"
            ></Button>
    </LinearLayout>


</LinearLayout>