<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20px"
        android:id="@+id/llTimekeepingItem"
        android:background="@drawable/worker_box">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/box_text_style"
                android:text="@string/name">
            </TextView>
            <TextView
                android:paddingHorizontal="5dp"
                style="@style/box_text_style"
                android:id="@+id/tvNametkd1">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    style="@style/box_text_style"
                    android:text="@string/date">
                </TextView>
                <TextView
                    android:paddingHorizontal="5dp"
                    style="@style/box_text_style"
                    android:id="@+id/tvDatetkd1">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/box_text_style"
                    android:text="@string/worker_id">
                </TextView>
                <TextView
                    android:paddingHorizontal="5dp"
                    style="@style/box_text_style"
                    android:id="@+id/tvWorkerIdtkd1">
                </TextView>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingTop="5dp"
        android:paddingRight="28dp">

        <Button
            android:id="@+id/btnDeletetbnEditTimekeeping"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:background="@drawable/btn_delete_custom"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>