<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:background="@drawable/worker_box">
    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/item_add_time_keeping_style">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/san_pham">

        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spProductatkpd">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanh_pham">

        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/txtFinishProductatkpd">
        </EditText>
    </LinearLayout>
    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phe_pham">

        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/txtWasteProductatkpd">
        </EditText>
    </LinearLayout>
    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <Button
            style="@style/btn_add_style"
            android:text="Thêm"
            android:id="@+id/saveatk"
            ></Button>
    </LinearLayout>


</LinearLayout>