<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/worker_box"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/san_pham"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/text_bold"/>
                <TextView
                    android:id="@+id/tvProductNametkd"
                    android:paddingHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/text_bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thanh_pham"
                    android:textColor="@color/text_bold"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFinishtkd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/text_bold"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phe_pham"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/text_bold"/>
                <TextView
                    android:id="@+id/tvWastetkd"
                    android:paddingHorizontal="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/text_bold"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingTop="5dp"
            android:paddingRight="28dp">
            <Button
                android:id="@+id/btnEditTimekeepingDetail"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:background="@drawable/btn_edit"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/edit"
                android:layout_marginRight="10dp"/>
            <Button
                android:id="@+id/btnDeleteTimekeepingDetail"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:background="@drawable/btn_delete"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/delete"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>