<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:background="@drawable/worker_box">
    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/item_add_time_keeping_style">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/factory">

        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spFactoroyatk">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/worker">

        </TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spWorkeratk">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_keeping_date">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDateatk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Chọn ngày"
                ></TextView>

            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_baseline_calendar_today_24"
                android:id="@+id/openCalenderftk">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/item_add_time_keeping_style">
        <Button
            style="@style/btn_add_style"
            android:text="Thêm"
            android:id="@+id/saveatk"
            ></Button>
    </LinearLayout>


</LinearLayout>